--- a/web/domain_app/trackie/templates/partials/race/detail.html
+++ b/web/domain_app/trackie/templates/partials/race/detail.html
@@ -4,9 +4,12 @@
 <div class="row" data-ng-show="race">
     <div class="col-xs-12">
         <h3 style="margin-top:0;">{{ race.name }}</h3>
-        <a data-ng-href="#/race-type/{{ race.type.slug }}" target="_self">{{ race.type.name }}</a> -
-        <a data-ng-href="#/tournament/{{ race.tournament.slug }}" target="_self">{{ race.tournament.name }}</a> -
-        <a data-ng-href="#/sport/{{ race.tournament.sport.slug }}" target="_self">{{ race.tournament.sport.name }}</a>
+        <div>
+            <a data-ng-href="#/race/{{ race.id }}/update" target="_self" class="btn btn-primary" data-ng-if="user.username == race.tournament.owner.username && !race.real_start">Upraviť preteky</a>
+            <a data-ng-href="#/race/{{ race.id }}/participants" class="btn btn-primary" target="_self" data-ng-if="user.username == race.tournament.owner.username && !race.real_start">Upraviť účstníkov</a>
+        </div>
+        <a data-ng-href="#/tournament/{{ race.tournament.id }}" target="_self">{{ race.tournament.name }}</a> -
+        <a data-ng-href="#/sports/{{ race.tournament.sport.slug }}" target="_self">{{ race.tournament.sport.name }}</a>
     </div>
 </div>
 <div class="row" data-ng-show="race">
