--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -19,13 +19,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="#/">
                     <img class="header-logo" alt="Trackie logo" src="{% static "assets/trackie/img/trackie_logo.svg" %}">
                 </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active">
+                    <li>
                         <a target="_self" href="#/">
                             <span class="fa fa-home">&nbsp;</span>Domov
                         </a>
@@ -139,7 +139,7 @@
     <script src="{% static 'third-party/moment-timezone/moment-timezone-with-data.min.js' %}"></script>
     <script src="{% static 'third-party/moment-duration/moment-duration-format.js' %}"></script>
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
-    <script src="{% static 'third-party/restangular/restangular.js' %}"></script>
+    <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
     <script src="{% static 'third-party/angular-ui-grid/ui-grid.min.js' %}"></script>
     <script src="{% static 'third-party/openlayers/ol.js' %}"></script>
     <script src="{% static 'third-party/ol-sidebar2/js/ol3-sidebar.min.js' %}"></script>
