Added list of races for online, upcoming and finished

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -36,9 +36,9 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a target="_self" href="#/map">Online</a></li>
-                            <li><a target="_self" href="#">Nadchádzajúce</a></li>
-                            <li><a target="_self" href="#">Ukončené</a></li>
+                            <li><a target="_self" href="#/races/online">Online</a></li>
+                            <li><a target="_self" href="#/races/upcoming">Nadchádzajúce</a></li>
+                            <li><a target="_self" href="#/races/finsihed">Ukončené</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -82,13 +82,13 @@
                    <span class="bold-text">Preteky</span>
                     <ul class="footer-menu">
                         <li>
-                            <a target="_self" href="#/map" title="#">Online</a>
+                            <a target="_self" href=#/races/online">Online</a>
                         </li>
                         <li>
-                            <a target="_self" href="#" title="#">Nadchádzajúce</a>
+                            <a target="_self" href="#/races/upcoming">Nadchádzajúce</a>
                         </li>
                         <li>
-                            <a target="_self" href="#" title="#">Ukončené</a>
+                            <a target="_self" href="#/races/finsihed">Ukončené</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="row" id="author">
-                <div class="col-xs-12 text-center">Richard Rožár 2016</div>
+                <div class="col-xs-12 text-center">Richard Rožár 2016-2017</div>
             </div>
         </div>
     </footer>
