Updated fontawesome, added links to minibar for tournaments, racer, added list of racers

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -30,6 +30,11 @@
                             <span class="fa fa-home">&nbsp;</span>Domov
                         </a>
                     </li>
+                    <li>
+                        <a target="_self" href="#/tournaments">
+                            <span class="fa fa-trophy">&nbsp;</span>Turnaje
+                        </a>
+                    </li>
                     <li class="dropdown">
                         <a target="_self" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="fa fa-bicycle"></span>&nbsp;Preteky
@@ -40,6 +45,11 @@
                             <li><a target="_self" href="#/races/upcoming">Nadchádzajúce</a></li>
                             <li><a target="_self" href="#/races/finsihed">Ukončené</a></li>
                         </ul>
+                    </li>
+                    <li>
+                        <a target="_self" href="#/racers">
+                            <span class="fa fa-users">&nbsp;</span>Pretekári
+                        </a>
                     </li>
                 </ul>
                 {% verbatim %}
