--- a/web/domain_app/trackie/templates/partials/login.html
+++ b/web/domain_app/trackie/templates/partials/login.html
@@ -4,7 +4,7 @@
     </li>
     <li data-ng-if="djangoAuth.authenticated">
         {% verbatim %}
-        <a href="#/profile" target="_self"><b>{{ djangoAuth.user.username }}</b></a>
+        <a href="#/profile" target="_self"><i class="fa fa-user-circle"></i> <b>{{ djangoAuth.user.username }}</b></a>
         {% endverbatim %}
     </li>
     <li data-ng-if="djangoAuth.authenticated">
