--- a/web/domain_app/trackie/templates/partials/race/detail.html
+++ b/web/domain_app/trackie/templates/partials/race/detail.html
@@ -6,7 +6,7 @@
         <h3 style="margin-top:0;">{{ race.name }}</h3>
         <div>
             <a data-ng-href="#/race/{{ race.id }}/update" target="_self" class="btn btn-primary" data-ng-if="user.username == race.tournament.owner.username && !race.real_start">Upraviť preteky</a>
-            <a data-ng-href="#/race/{{ race.id }}/participants" class="btn btn-primary" target="_self" data-ng-if="user.username == race.tournament.owner.username && !race.real_start">Upraviť účstníkov</a>
+            <a data-ng-href="#/race/{{ race.id }}/participants" class="btn btn-primary" target="_self" data-ng-if="user.username == race.tournament.owner.username && !race.real_start">Upraviť účastníkov</a>
         </div>
         <a data-ng-href="#/tournament/{{ race.tournament.id }}" target="_self">{{ race.tournament.name }}</a> -
         <a data-ng-href="#/sports/{{ race.tournament.sport.slug }}" target="_self">{{ race.tournament.sport.name }}</a>
@@ -18,9 +18,6 @@
             <div class="sidebar-tabs">
                 <ul role="tablist">
                     <li><a href="#profile" target="_self" role="tab"><i class="fa fa-user"></i></a></li>
-                </ul>
-                <ul role="tablist">
-                    <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
                 </ul>
             </div>
             <div class="sidebar-content">
