fast fixes, documentation

--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -99,6 +99,14 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-md-2">
+                    <span class="bold-text">Dokumentácia</span>
+                    <ul class="footer-menu">
+                        <li>
+                            <a target="_self" href="#/api" title="#">API</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="row" id="author">
                 <div class="col-xs-12 text-center">Richard Rožár 2016-2017</div>
