--- a/web/domain_app/trackie/templates/partials/race/detail.html
+++ b/web/domain_app/trackie/templates/partials/race/detail.html
@@ -50,3 +50,8 @@
         <div ui-grid="gridOptions" data-ui-grid-selection data-ui-grid-pagination class="grid"></div>
     </div>
 </div>
+<div class="row" data-ng-if="!gridOptions.data.length">
+    <div class="col-xs-12">
+        <p class="text-center">Tabuľka nie je zobrazená kvôli: Záznam nie je spustený / Neboli prijaté žiadne údaje</p>
+    </div>
+</div>
