--- a/web/domain_app/trackie/templates/trackie/main/registered.html
+++ b/web/domain_app/trackie/templates/trackie/main/registered.html
@@ -1,18 +1,18 @@
 <div class="row">
     <div class="col-xs-12">
-        <h1>Spravovanie vlastnených objektov</h1>
+        <h1>Spravovať</h1>
         <ul>
             <li><a href="#/own/tournaments">Turnaje</a></li>
             <li><a href="#/own/races">Preteky</a></li>
             <li><a href="#/own/tracks">Trate</a></li>
-            <li><a href="#/own/race-types">Typy pretekov</a></li>
+            <li><a href="#/own/race-fields">Polia pretekov</a></li>
         </ul>
-        <h1>Pridať objekty</h1>
+        <h1>Pridať</h1>
         <ul>
             <li><a href="#/tournaments/add">Turnaj</a></li>
             <li><a href="#/races/add">Preteky</a></li>
             <li><a href="#/track/add">Trať</a></li>
-            <li><a href="#/race-fields/add">Typ pretekov</a></li>
+            <li><a href="#/race-fields/add">Polia pretekov</a></li>
             <li><a href="#/racer/add">Pretekára</a></li>
         </ul>
     </div>
